[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2021'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'frontier-template-node'
publish = false
repository = 'https://github.com/substrate-developer-hub/frontier-node-template/'
version = '0.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
branch = 'master'
git = 'https://github.com/paritytech/substrate'
version = '3.0.0'

[features]
aura = ['frontier-template-runtime/aura']
manual-seal = ['frontier-template-runtime/manual-seal']
default = ['aura']
rpc_binary_search_estimate = ['fc-rpc/rpc_binary_search_estimate']
runtime-benchmarks = ['frontier-template-runtime/runtime-benchmarks']

[dependencies]
async-trait = '0.1'
futures = '0.3'
jsonrpc-core = '18.0.0'
jsonrpc-pubsub = '18.0.0'
log = '0.4.8'

clap = { version = "3.1", default-features = false, features = ["derive"] }
codec = { version = "3.1", default-features = false, features = [
    "derive",
], package = "parity-scale-codec" }

fc-consensus = { git = "https://github.com/paritytech/frontier.git" }
fc-db = { git = "https://github.com/paritytech/frontier.git" }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier.git" }
fc-rpc = { git = "https://github.com/paritytech/frontier.git" }
fc-rpc-core = { git = "https://github.com/paritytech/frontier.git" }

fp-consensus = { git = "https://github.com/paritytech/frontier.git" }
fp-dynamic-fee = { git = "https://github.com/paritytech/frontier.git" }
fp-evm = { git = "https://github.com/paritytech/frontier.git" }
fp-rpc = { git = "https://github.com/paritytech/frontier.git" }
fp-storage = { git = "https://github.com/paritytech/frontier.git" }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master" }

frontier-template-runtime = { default-features = false, features = [
    'std',
], path = '../runtime' }

pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }

sc-cli = { git = "https://github.com/paritytech/substrate", branch = "master", features = [
    'wasmtime',
] }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master", features = [
    'wasmtime',
] }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "master" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "master" }
